--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -5,7 +5,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="12dp">
+    android:layout_marginTop="@dimen/contacts_between_distance"
+    android:layout_marginEnd="@dimen/contacts_between_distance"
+    android:layout_marginStart="@dimen/contacts_between_distance">
 
     <FrameLayout
         android:layout_width="120dp"
@@ -16,14 +18,14 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:contentDescription="@string/avatar"
-            tools:src="@drawable/base_contact_avatar"/>
+            tools:src="@drawable/base_avatar_daynight"/>
 
         <ImageView
-            android:id="@+id/addToFavoriteButton"
+            android:id="@+id/isFavoriteImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_favorite_daynight"
-            android:layout_margin="4dp"
+            android:layout_marginEnd="4dp"
+            tools:src="@drawable/ic_favorite_daynight"
             android:layout_gravity="top|end"
             android:contentDescription="@string/add_to_favorites"
             android:background="?android:attr/selectableItemBackground"/>
