--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,7 +4,7 @@
         android:id="@+id/contacts"
         android:enabled="true"
         android:title="@string/contacts"
-        android:icon="@drawable/ic_contact"/>
+        android:icon="@drawable/ic_contact_white"/>
     <item
         android:id="@+id/favorites"
         android:enabled="true"
@@ -14,5 +14,5 @@
         android:id="@+id/account"
         android:enabled="true"
         android:title="@string/account"
-        android:icon="@drawable/ic_face"/>
+        android:icon="@drawable/ic_face_white"/>
 </menu>
