--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -2,15 +2,17 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginTop="@dimen/contacts_between_distance"
     android:layout_marginEnd="@dimen/contacts_between_distance"
-    android:layout_marginStart="@dimen/contacts_between_distance">
+    android:layout_marginStart="@dimen/contacts_between_distance"
+    android:background="?attr/selectableItemBackground"
+    android:padding="4dp">
 
     <FrameLayout
-        android:layout_width="120dp"
+        android:layout_width="match_parent"
         android:layout_height="120dp">
 
         <ImageView
@@ -39,7 +41,6 @@
         android:ellipsize="end"
         android:textColor="?android:attr/textColorPrimary"
         android:maxLines="1"
-        android:background="?android:attr/selectableItemBackground"
         tools:text="Ivan Ivanov"/>
 
     <TextView
