--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/contacts"
+        android:id="@+id/contacts_btn"
         android:enabled="true"
         android:title="@string/contacts"
         android:icon="@drawable/ic_contact_white"/>
     <item
-        android:id="@+id/favorites"
+        android:id="@+id/favorites_btn"
         android:enabled="true"
         android:title="@string/favorites"
         android:icon="@drawable/ic_favorite_white"/>
     <item
-        android:id="@+id/account"
+        android:id="@+id/account_btn"
         android:enabled="true"
         android:title="@string/account"
         android:icon="@drawable/ic_face_white"/>
