--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:elevation="8dp"
     app:cardBackgroundColor="?attr/colorPrimary"
-    app:cardCornerRadius="16dp"
-    android:elevation="8dp">
+    app:cardCornerRadius="16dp">
 
     <TextView
         android:id="@+id/text_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="6dp"
-        android:gravity="center"
         android:ellipsize="end"
-        android:textSize="16sp"
+        android:gravity="center"
+        android:padding="6dp"
         android:textColor="?attr/colorOnPrimary"
-        tools:text="@tools:sample/lorem[20]"/>
+        android:textSize="16sp"
+        tools:text="@tools:sample/lorem[20]" />
 
 </androidx.cardview.widget.CardView>
