--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="120dp"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_marginStart="@dimen/contacts_between_distance"
     android:layout_marginTop="@dimen/contacts_between_distance"
     android:layout_marginEnd="@dimen/contacts_between_distance"
-    android:layout_marginStart="@dimen/contacts_between_distance"
     android:background="?attr/selectableItemBackground"
+    android:orientation="vertical"
     android:padding="4dp">
 
     <FrameLayout
@@ -17,20 +16,20 @@
 
         <ImageView
             android:id="@+id/avatarImageView"
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:contentDescription="@string/avatar"
-            tools:src="@drawable/base_avatar_daynight"/>
+            tools:src="@drawable/base_avatar_daynight" />
 
         <ImageView
             android:id="@+id/isFavoriteImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            tools:src="@drawable/ic_favorite_daynight"
             android:layout_gravity="top|end"
+            android:layout_marginEnd="4dp"
+            android:background="?android:attr/selectableItemBackground"
             android:contentDescription="@string/add_to_favorites"
-            android:background="?android:attr/selectableItemBackground"/>
+            tools:src="@drawable/ic_favorite_daynight" />
     </FrameLayout>
 
     <TextView
@@ -39,17 +38,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
-        android:textColor="?android:attr/textColorPrimary"
         android:maxLines="1"
-        tools:text="Ivan Ivanov"/>
+        android:textColor="?android:attr/textColorPrimary"
+        tools:text="Ivan Ivanov" />
 
     <TextView
         android:id="@+id/contactNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:background="?android:attr/selectableItemBackground"
         android:ellipsize="end"
         android:maxLines="1"
-        android:background="?android:attr/selectableItemBackground"
-        tools:text="+7 800 555-35-35"/>
+        tools:text="+7 800 555-35-35" />
 </LinearLayout>
