--- a/app/src/main/res/layout/item_input_contact.xml
+++ b/app/src/main/res/layout/item_input_contact.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -13,11 +12,11 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputNameEditText"
+            style="@style/EditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
             android:imeOptions="actionNext"
-            style="@style/EditTextStyle"/>
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -27,11 +26,11 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputNumberEditText"
+            style="@style/EditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
             android:imeOptions="actionDone"
-            style="@style/EditTextStyle"/>
+            android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
