--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,16 +3,16 @@
     <item
         android:id="@id/contact_list"
         android:enabled="true"
-        android:title="@string/contacts"
-        android:icon="@drawable/ic_contact_white"/>
+        android:icon="@drawable/ic_contact_white"
+        android:title="@string/contacts" />
     <item
         android:id="@id/favorite_contact_list"
         android:enabled="true"
-        android:title="@string/favorites"
-        android:icon="@drawable/ic_favorite_white"/>
+        android:icon="@drawable/ic_favorite_white"
+        android:title="@string/favorites" />
     <item
         android:id="@id/profile"
         android:enabled="true"
-        android:title="@string/account"
-        android:icon="@drawable/ic_face_white"/>
+        android:icon="@drawable/ic_face_white"
+        android:title="@string/account" />
 </menu>
