--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -9,7 +9,7 @@
     app:cardCornerRadius="16dp">
 
     <TextView
-        android:id="@+id/text_view"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:ellipsize="end"
