--- a/app/src/main/res/navigation/tabs_graph.xml
+++ b/app/src/main/res/navigation/tabs_graph.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/tabs_graph"
+<navigation xmlns:app="http://schemas.android.com/apk/res-auto"
     app:startDestination="@id/contact_list">
 
     <include app:graph="@navigation/contact_list" />
