add image picker to SideEffectsApi.kt, realize in MainActivity.kt and use in ContactInputDialogFragment.kt
add lifecycle dependencies (for live data)

change ContactInputDialogFragment.kt from DialogFragment to Fragment (need to rename)
add ContactInputDialogViewModel.kt for State Save
extract ContactInputDialogFragment.kt in navigation from contact_list.xml and favorite_contact_list.xml to root_graph.xml (todo : need to find direction from TabsFragment to ContactInputDialogFragment.kt)
add ViewModelFactory.kt for di (because need @AssistedInject)

--- a/app/src/main/res/navigation/root_graph.xml
+++ b/app/src/main/res/navigation/root_graph.xml
@@ -17,5 +17,18 @@
         android:id="@+id/tabsFragment"
         android:name="com.example.mycontacts.ui.tabs_screen.TabsFragment"
         android:label="TabsFragment"
-        tools:layout="@layout/fragment_tabs" />
+        tools:layout="@layout/fragment_tabs" >
+        <action
+            android:id="@+id/action_tabsFragment_to_contactInputDialogFragment"
+            app:destination="@id/contactInputDialogFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/contactInputDialogFragment"
+        android:name="com.example.mycontacts.ui.input_contact_screen.ContactInputDialogFragment"
+        android:label="ContactInputDialogFragment"
+        tools:layout="@layout/dialog_input_contact">
+        <argument
+            android:name="prevContact"
+            app:argType="com.example.mycontacts.domain.model.Contact" />
+    </fragment>
 </navigation>
