--- a/app/src/main/res/layout/dialog_input_contact.xml
+++ b/app/src/main/res/layout/dialog_input_contact.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     android:padding="20dp">
 
+    <ImageView
+        android:id="@+id/inputImageView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/avatar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/base_avatar_daynight" />
+
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
+        android:id="@+id/textInputLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_contacts_name_hint">
+        android:layout_marginTop="10dp"
+        android:hint="@string/enter_contacts_name_hint"
+        app:layout_constraintEnd_toEndOf="@+id/inputImageView"
+        app:layout_constraintStart_toStartOf="@+id/inputImageView"
+        app:layout_constraintTop_toBottomOf="@+id/inputImageView">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputNameEditText"
@@ -20,9 +38,14 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
+        android:id="@+id/textInputLayout2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_contacts_number_hint">
+        android:layout_marginTop="10dp"
+        android:hint="@string/enter_contacts_number_hint"
+        app:layout_constraintEnd_toEndOf="@+id/inputImageView"
+        app:layout_constraintStart_toStartOf="@+id/inputImageView"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputNumberEditText"
@@ -33,4 +56,25 @@
             android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:minWidth="100dp"
+        android:text="@string/cancel"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+
+    <Button
+        android:id="@+id/confirmButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:minWidth="100dp"
+        android:text="@string/confirm"
+        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
+        app:layout_constraintTop_toTopOf="@+id/cancelButton" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
