fix navigation from TabsFragment.kt to ContactInputFragment.kt (use top level nav controller and TabsFragmentDestination) rename ContactInputDialogFragment.kt to ContactInputFragment.kt and ContactInputDialogViewModel.kt to ContactInputViewModel.kt
move ui util classes to new package
move adapter and diff util to new package

refactor string resources for ContactInputFragment.kt

--- a/app/src/main/res/navigation/root_graph.xml
+++ b/app/src/main/res/navigation/root_graph.xml
@@ -17,15 +17,15 @@
         android:id="@+id/tabsFragment"
         android:name="com.example.mycontacts.ui.tabs_screen.TabsFragment"
         android:label="TabsFragment"
-        tools:layout="@layout/fragment_tabs" >
+        tools:layout="@layout/fragment_tabs">
         <action
             android:id="@+id/action_tabsFragment_to_contactInputDialogFragment"
             app:destination="@id/contactInputDialogFragment" />
     </fragment>
     <fragment
         android:id="@+id/contactInputDialogFragment"
-        android:name="com.example.mycontacts.ui.input_contact_screen.ContactInputDialogFragment"
-        android:label="ContactInputDialogFragment"
+        android:name="com.example.mycontacts.ui.input_contact_screen.ContactInputFragment"
+        android:label="@string/contact_input_title"
         tools:layout="@layout/dialog_input_contact">
         <argument
             android:name="prevContact"
