--- a/app/src/main/res/layout-land/fragment_input_contact.xml
+++ b/app/src/main/res/layout-land/fragment_input_contact.xml
@@ -8,25 +8,27 @@
 
     <ImageView
         android:id="@+id/inputImageView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="@dimen/image_size"
+        android:layout_height="@dimen/image_size"
         android:layout_gravity="center"
         android:background="?attr/selectableItemBackground"
         android:contentDescription="@string/avatar"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/group"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/base_avatar_daynight" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/input_field_between_distance"
         android:hint="@string/enter_contacts_name_hint"
-        app:layout_constraintEnd_toEndOf="@+id/inputImageView"
-        app:layout_constraintStart_toStartOf="@+id/inputImageView"
-        app:layout_constraintTop_toBottomOf="@+id/inputImageView">
+
+        app:layout_constraintStart_toEndOf="@+id/inputImageView"
+        app:layout_constraintTop_toTopOf="@+id/inputImageView"
+        android:maxWidth="400dp"
+        android:minWidth="250dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputNameEditText"
@@ -39,13 +41,14 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout2"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/input_field_between_distance"
         android:hint="@string/enter_contacts_number_hint"
-        app:layout_constraintEnd_toEndOf="@+id/inputImageView"
-        app:layout_constraintStart_toStartOf="@+id/inputImageView"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        android:maxWidth="400dp"
+        android:minWidth="250dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputNumberEditText"
@@ -63,9 +66,8 @@
         android:layout_gravity="start"
         android:minWidth="100dp"
         android:text="@string/cancel"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+        app:layout_constraintBottom_toBottomOf="@+id/inputImageView"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout2" />
 
     <Button
         android:id="@+id/confirmButton"
@@ -76,5 +78,15 @@
         android:text="@string/confirm"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
         app:layout_constraintTop_toTopOf="@+id/cancelButton" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
