fix fragment result api bug
fix request code conflicts (add new parameter in FragmentResultApi.kt)
add new argument for ContactInputFragment.kt (requestKey: String)
add this argument to directions in ContactListFragment.kt BaseContactListFragment.kt
extract listenFragmentResult to onViewCreated methods of Fragments

--- a/app/src/main/res/navigation/root_graph.xml
+++ b/app/src/main/res/navigation/root_graph.xml
@@ -30,5 +30,13 @@
         <argument
             android:name="prevContact"
             app:argType="com.example.mycontacts.domain.model.Contact" />
+        <action
+            android:id="@+id/action_contactInputFragment_to_tabsFragment"
+            app:destination="@id/tabsFragment"
+            app:popUpTo="@id/tabsFragment"
+            app:popUpToInclusive="false" />
+        <argument
+            android:name="requestKey"
+            app:argType="string" />
     </fragment>
 </navigation>
