--- a/app/src/main/res/layout/fragment_input_contact.xml
+++ b/app/src/main/res/layout/fragment_input_contact.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp">
 
-    <ImageView
-        android:id="@+id/inputImageView"
-        android:layout_width="@dimen/image_size"
-        android:layout_height="@dimen/image_size"
-        android:layout_gravity="center"
-        android:background="?attr/selectableItemBackground"
-        android:contentDescription="@string/avatar"
+    <include
+        android:id="@+id/inputImageLayout"
+        layout="@layout/part_image_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/base_avatar_daynight" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
@@ -24,9 +20,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/input_field_between_distance"
         android:hint="@string/enter_contacts_name_hint"
-        app:layout_constraintEnd_toEndOf="@+id/inputImageView"
-        app:layout_constraintStart_toStartOf="@+id/inputImageView"
-        app:layout_constraintTop_toBottomOf="@+id/inputImageView">
+        app:layout_constraintEnd_toEndOf="@+id/inputImageLayout"
+        app:layout_constraintStart_toStartOf="@+id/inputImageLayout"
+        app:layout_constraintTop_toBottomOf="@+id/inputImageLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputNameEditText"
@@ -43,8 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/input_field_between_distance"
         android:hint="@string/enter_contacts_number_hint"
-        app:layout_constraintEnd_toEndOf="@+id/inputImageView"
-        app:layout_constraintStart_toStartOf="@+id/inputImageView"
+        app:layout_constraintEnd_toEndOf="@+id/inputImageLayout"
+        app:layout_constraintStart_toStartOf="@+id/inputImageLayout"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
