--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <style name="EditTextStyle">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:backgroundTint">?attr/colorBackgroundFloating</item>
+    </style>
+
+    <style name="ProfileStyle">
+        <item name="android:layout_marginTop">@dimen/profile_between_distance</item>
+    </style>
+
+    <style name="ProfileTitleStyle" parent="ProfileStyle">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="ProfileMainItemStyle" parent="ProfileStyle">
+        <item name="android:textColor">?attr/colorOnBackground</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="ProfileItemStyle" parent="ProfileStyle">
+        <item name="android:textSize">12sp</item>
     </style>
 </resources>
