--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,15 +6,26 @@
     android:layout_height="match_parent"
     android:padding="20dp">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/profileImageIV"
         android:layout_width="@dimen/image_size"
         android:layout_height="@dimen/image_size"
+        android:background="?attr/selectableItemBackground"
         android:contentDescription="@string/profile_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/base_avatar_daynight"/>
+        tools:src="@drawable/base_avatar_daynight" />
 
     <TextView
         android:id="@+id/profileDataTitleTV"
@@ -57,42 +68,21 @@
         app:layout_constraintTop_toBottomOf="@+id/profileNumberTV" />
 
     <TextView
-        android:id="@+id/contactsCountTitle"
-        style="@style/ProfileMainItemStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/profile_contacts_count"
-        app:layout_constraintStart_toStartOf="@+id/statisticsTitleTV"
-        app:layout_constraintTop_toBottomOf="@+id/statisticsTitleTV" />
-
-    <TextView
         android:id="@+id/contactsCount"
-        style="@style/ProfileItemStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAlignment="viewEnd"
-        app:layout_constraintEnd_toEndOf="@+id/statisticsTitleTV"
-        app:layout_constraintStart_toStartOf="@+id/contactsCountTitle"
-        app:layout_constraintTop_toBottomOf="@+id/contactsCountTitle"
-        tools:text="123" />
-
-    <TextView
-        android:id="@+id/favContactsCountTitle"
         style="@style/ProfileMainItemStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/profile_fav_contacts_count"
-        app:layout_constraintStart_toStartOf="@+id/contactsCountTitle"
-        app:layout_constraintTop_toBottomOf="@+id/contactsCount" />
+        app:layout_constraintStart_toStartOf="@+id/statisticsTitleTV"
+        app:layout_constraintTop_toBottomOf="@+id/statisticsTitleTV"
+        tools:text="@string/profile_contacts_count" />
 
     <TextView
         android:id="@+id/favContactsCount"
-        style="@style/ProfileItemStyle"
-        android:layout_width="0dp"
+        style="@style/ProfileMainItemStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="viewEnd"
-        app:layout_constraintEnd_toEndOf="@+id/statisticsTitleTV"
-        app:layout_constraintStart_toStartOf="@+id/favContactsCountTitle"
-        app:layout_constraintTop_toBottomOf="@+id/favContactsCountTitle"
-        tools:text="123" />
+        app:layout_constraintStart_toStartOf="@+id/contactsCount"
+        app:layout_constraintTop_toBottomOf="@+id/contactsCount"
+        tools:text="@string/profile_fav_contacts_count" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
