finish Profile Screen
finish fragment_profile.xml

change ProfileSharedPreferences to PrefDataStore (add Flow sync): add new const to Constants.kt, add dependencies to build.gradle

extract collectWhenStarted to Fragment extension

move UiState.kt to new package state

--- a/app/src/main/res/layout/fragment_input_contact.xml
+++ b/app/src/main/res/layout/fragment_input_contact.xml
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:imeOptions="actionDone"
-            android:inputType="number" />
+            android:inputType="phone|number" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -57,9 +57,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
+        android:layout_marginTop="@dimen/input_field_between_distance"
         android:minWidth="100dp"
         android:text="@string/cancel"
-        android:layout_marginTop="@dimen/input_field_between_distance"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
