--- a/app/src/main/res/navigation/profile.xml
+++ b/app/src/main/res/navigation/profile.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.example.mycontacts.ui.profile_screen.ProfileFragment"
+        android:name="com.example.mycontacts.presenter.ui.profile_screen.ProfileFragment"
         android:label="@string/profile_title"
         tools:layout="@layout/fragment_profile" />
 </navigation>
