--- a/app/src/main/res/navigation/contact_list.xml
+++ b/app/src/main/res/navigation/contact_list.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/contactListFragment"
-        android:name="com.example.mycontacts.ui.contact_list_screen.ContactListFragment"
+        android:name="com.example.mycontacts.presenter.ui.contact_list_screen.ContactListFragment"
         android:label="@string/contact_list_title"
         tools:layout="@layout/fragment_contact_list">
     </fragment>
